// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyLists > should render MyLists default 1`] = `
<DocumentFragment>
  <div
    class="_root_fa1154  "
  >
    <span
      class="_title_fa1154"
    >
      My Lists
    </span>
    <div
      class="_list_fa1154"
    >
      <div
        class="_list-item_fa1154"
      >
        <span>
          My special list (
          <a
            href="#"
          >
            Me
          </a>
          )
        </span>
      </div>
      <div
        class="_list-item_fa1154"
      >
        <span>
          Financial list (
          <a
            href="#"
          >
            Me
          </a>
          )
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MyLists > should render MyLists when the menu is closed 1`] = `
<DocumentFragment>
  <div
    class="_root_fa1154 _menu-closed_fa1154 "
  >
    <span
      class="_title_fa1154"
    >
      My Lists
    </span>
    <div
      class="_list_fa1154"
    >
      <div
        class="_list-item_fa1154"
      >
        <span>
          My special list (
          <a
            href="#"
          >
            Me
          </a>
          )
        </span>
      </div>
      <div
        class="_list-item_fa1154"
      >
        <span>
          Financial list (
          <a
            href="#"
          >
            Me
          </a>
          )
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
